--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,11 @@
         "laravel-vite-plugin": "^1.2.0",
         "pusher-js": "^8.4.0",
         "tailwindcss": "^4.0.0",
-        "vite": "^6.0.11"
+        "vite": "^6.2.3"
+    },
+    "dependencies": {
+        "20": "^1.0.0",
+        "pusher": "^5.2.0",
+        "socket.io-client": "^4.8.1"
     }
 }
