--- a/src/.env.example
+++ b/src/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:VmSlS4vieAIT2YbdSqXgy9dpaZLpdVcfR3EZsSUzAEQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -33,7 +33,7 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
+BROADCAST_CONNECTION=reverb
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
@@ -63,3 +63,28 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+REVERB_APP_ID=471155
+REVERB_APP_KEY=dgcbuq9etu88acqrajcn
+REVERB_APP_SECRET=x1uacx7uewqbotniwm2x
+# REVERB_SERVER_HOST="localhost"
+# REVERB_SERVER_PORT=8080
+REVERB_HOST="localhost"
+REVERB_PORT=8080
+REVERB_SCHEME=http
+
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VITE_REVERB_HOST="${REVERB_HOST}"
+VITE_REVERB_PORT="${REVERB_PORT}"
+VITE_REVERB_SCHEME="${REVERB_SCHEME}"
+
+BROADCAST_DRIVER=pusher
+
+
+PUSHER_APP_ID=local
+PUSHER_APP_KEY=local
+PUSHER_APP_SECRET=local
+PUSHER_HOST=localhost
+PUSHER_PORT=8080
+PUSHER_SCHEME=http
+PUSHER_APP_CLUSTER=mt1
